--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
 
   <body class="<%= page_classes %>">
     <%= partial "partials/navigation" %>
+    <%= data.something.hello %>
     <%= yield %>
     <%= partial "partials/footer" %>
   </body>
