--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "Coding the Humanities" %></title>
 
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
