--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,4 @@
-<!doctype html>
-<html>
-  <head>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-
-    <title><%= current_page.data.title || "Coding the Humanities" %></title>
-
-    <%= stylesheet_link_tag :site %>
-    <%= javascript_include_tag :all %>
-  </head>
-
-  <body class="<%= page_classes %>">
-    <%= partial "partials/navigation" %>
-    <%= yield %>
-    <%= partial "partials/footer" %>
-  </body>
-</html>
+<%= partial "partials/head" %>
+<%= partial "partials/navigation" %>
+<%= yield %>
+<%= partial "partials/footer" %>
