--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,6 @@
 ---
 title: The Story of Coding the Humanities
+layout: story
 ---
 
 <main class="story">
@@ -17,11 +18,11 @@ title: The Story of Coding the Humanities
     <div class="column-left">
     <% blog('blocks').articles.each do |block| %>
     <% if block.data.item == item and block.data.block != 4 %>
-      <%= partial(:"partials/block", :locals => { :block => block })  %>
+      <%= partial(:"partials/story-block", :locals => { :block => block })  %>
     <% elsif block.data.item == item and block.data.block == 4 %>
     </div>
     <div class="column-right">
-      <%= partial(:"partials/block", :locals => { :block => block })  %>
+      <%= partial(:"partials/story-block", :locals => { :block => block })  %>
     <% end %>
     <% end %>
     </div>
