--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -3,7 +3,7 @@
   <div>
     <% if block.data.references %>
     <% for reference in block.data.references %>
-      <%= partial(:"partials/reference", :locals => { :reference => reference })  %>
+      <%= partial(:"partials/story-reference", :locals => { :reference => reference })  %>
     <% end %>
     <% end %>
   </div>
