--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,3 +1,3 @@
 <div class="reference">
-  <h3><%= reference.slug %></h3>
+  <a href="<%= reference.type %>/<%= reference.slug %>.html"><h3><%= reference.slug %></h3></a>
 </div> 
