--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,9 +1,10 @@
 <%= partial "partials/head" %>
 <%= partial "partials/navigation" %>
 
-<h1><%= current_resource.title %></h1>
-<h1><%= current_resource.data.authors %> </h1>
-
-<%= yield %>
+<main class="main article">
+  <h1><%= current_resource.title %></h1>
+  <h1><%= current_resource.data.authors %> </h1>
+  <%= yield %>
+</main>
 
 <%= partial "partials/footer" %>
