--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -7,4 +7,6 @@
 @import 'navigation/nav';
 @import 'navigation/footer';
 @import 'story/item';
+@import 'story/block';
+@import 'story/reference';
 @import 'pages/page';
