--- a/source/layouts/story.erb
+++ b/source/layouts/story.erb
@@ -1,4 +1,6 @@
 <%= partial "partials/head" %>
 <%= partial "partials/navigation" %>
-<%= yield %>
+<main class="main story">
+  <%= yield %>
+</main>
 <%= partial "partials/footer" %>
