--- a/source/stylesheets/story/_reference.scss
+++ b/source/stylesheets/story/_reference.scss
@@ -3,6 +3,7 @@
   color: white;
   width: 100%;
   padding: 15px;
+  margin: 0 0 1.5% 0;
   float: right;
   @media (min-width: 750px) {
     width: 30%;
