--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -7,7 +7,7 @@
 
     <title><%= current_page.data.title || "Coding the Humanities" %></title>
 
-    <%= stylesheet_link_tag :site %>
+    <%= stylesheet_link_tag :screen %>
     <%= javascript_include_tag :all %>
   </head>
   <body class="<%= page_classes %>">
