--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -7,8 +7,8 @@ $buttonFont: NittiBold;
 $buttonFontLight: NittiNormal;
 
 $baseUnit: rem-calc(30);
-$halfUnit: rem-calc(15);
 $thirdUnit: rem-calc(10);
+$halfUnit: rem-calc(15);
 $twoThirdUnit: rem-calc(20);
 
 $sidebarWidth: 14 * $baseUnit;
@@ -21,9 +21,9 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'global/mediaqueries';
 @import 'global/layout';
 
-@import 'navigation/nav';
-@import 'navigation/footer';
-@import 'story/item';
-@import 'story/block';
-@import 'story/reference';
-@import 'pages/page';
+@import 'components/nav';
+@import 'components/footer';
+@import 'components/story/item';
+@import 'components/story/block';
+@import 'components/story/reference';
+@import 'components/page';
