--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,10 +1,6 @@
 .footer {
-	background: black;
-	height: 300px;
-	width: 100%;
-  color: white;
-}
-
-h2 {
-  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	height: $baseUnit * 10;
 }
