--- a/source/stylesheets/components/_nav.scss
+++ b/source/stylesheets/components/_nav.scss
@@ -2,22 +2,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 100%;
-	height: 50px;
-	padding: 15px;
-	background: black;
-	color: white;
-	margin: 0;
-	overflow: hidden;
-	list-style: none;
-}
-
-.nav-link {
-	color: white;
-	&:visited {
-		color: white;
-	}
-	&:hover {
-		color: white;
-	}
+  padding: $baseUnit;
+	background: $lightBaseColor;
 }
