--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -1,8 +1,7 @@
 .block {
   width: 100%;
-  padding: 15px;
-  margin: 20px;
-  overflow: hidden;
+  padding: $baseUnit;
+  margin: $baseUnit;
   @include clearfix;
 }
 
