--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -1,20 +1,9 @@
 .reference {
-  background: black;
-  color: white;
-  width: 100%;
-  padding: 15px;
-  margin: 0 0 1.5% 0;
-  float: right;
-  @media (min-width: 750px) {
-    width: 30%;
-    margin: 1.5%;
-  }
+  border: 1px solid black;
+  padding: $baseUnit;
+  margin: $baseUnit;
 }
 
-.block-grey .reference {
-  float: none;
-  @media (min-width: 750px) {
-    width: 100%;
-    margin: 0 0 1.5% 0;
-  }
+.block-orange .reference {
+  float: right;
 }
