--- a/source/stylesheets/global/_layout.scss
+++ b/source/stylesheets/global/_layout.scss
@@ -1,25 +1,10 @@
-.app {
+.main {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  font-family: NittyNormal;
-  height: 100%;
-  overflow-y: hidden;
-  background: $lightBaseColor;
-  transition: background-color 0.4s ease;
-}
-
-.layout-sidebar {
-  display: flex;
-  flex-direction: row;
-  min-width: $sidebarWidth;
-  max-width: $sidebarWidth;
-}
-
-.layout-right {
   flex-direction: column;
-  width: auto;
-  flex: 1;
+  font-family: NittyNormal;
+  width: 100%;
+  min-height: 100%;
+  background: $lightBaseColor;
 }
 
 .layout-main {
@@ -33,16 +18,6 @@
 .layout-topbar {
   display: flex;
   width: 100%;
-  height: rem-calc(95);
   justify-content: space-between;
   flex-direction: row;
 }
-
-.app-is-introduction.app-is-learn {
-  background-color: $learnColor;
-}
-
-.app-is-introduction.app-is-curate {
-  background-color: $curateColor;
-}
-
