--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -1,9 +1,10 @@
 .reference {
   border: 1px solid black;
   padding: $baseUnit;
-  margin: $baseUnit;
+  margin: $baseUnit 0;
 }
 
 .block-orange .reference {
   float: right;
+  margin: $baseUnit;
 }
