box model in order

--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,6 +1,6 @@
 <nav>
   <ul class="nav-top">
-    <li class="nav-link"><a href="{{ site.baseurl }}/">Coding the Humanities</a></li>
+    <li class="nav-link"><a href="/">Coding the Humanities</a></li>
     <li class="nav-link">From Content to Context</li>
     <li class="nav-link">... to Curation</li>
     <li class="nav-link">... to Faciliation</li>
