--- a/source/stylesheets/global/_layout.scss
+++ b/source/stylesheets/global/_layout.scss
@@ -1,23 +1,17 @@
-.main {
+html {
+  height: 100%;
+}
+
+body {
   display: flex;
   flex-direction: column;
-  font-family: NittyNormal;
-  width: 100%;
+  justify-content: space-between;
   min-height: 100%;
   background: $lightBaseColor;
 }
 
-.layout-main {
-  display: block;
-  height: 100%;
-  padding-bottom: 100px;
-  margin-left: $baseUnit;
-  margin-right: $baseUnit;
-}
-
-.layout-topbar {
+.main {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
-  flex-direction: row;
+  flex-direction: column;
+  min-height: 100%;
 }
