visually clean and technically

--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -2,8 +2,8 @@
   <ul class="nav-top">
     <li class="nav-link"><a href="/">Coding the Humanities</a></li>
     <li class="nav-link">From Content to Context</li>
-    <li class="nav-link">... to Curation</li>
-    <li class="nav-link">... to Faciliation</li>
+    <li class="nav-link">To Curation</li>
+    <li class="nav-link">To Faciliation</li>
     <li class="nav-link">Partners</li>
     <li class="nav-link">About</li>
   </ul>
