--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -6,21 +6,21 @@
 }
 
 .block-red {
-  background: red;
+  // background: red;
 }
 
 .block-yellow {
-  background: yellow;
+  // background: yellow;
 }
 
 .block-aquamarine {
-  background: aquamarine;
+  // background: aquamarine;
 }
 
 .block-orange {
-  background: orange;
+  // background: orange;
 }
 
 .block-grey {
-  background: grey;
+  // background: grey;
 }
