--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -27,3 +27,4 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'components/story/block';
 @import 'components/story/reference';
 @import 'components/page';
+@import 'components/article';
