--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -10,4 +10,4 @@
     <%= stylesheet_link_tag :main %>
     <%= javascript_include_tag :all %>
   </head>
-  <body class="<%= page_classes %>">
+  <body>
