--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -26,5 +26,6 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'components/story/item';
 @import 'components/story/block';
 @import 'components/story/reference';
+@import 'components/story/entity';
 @import 'components/page';
 @import 'components/article';
