--- a/source/stylesheets/components/story/_item.scss
+++ b/source/stylesheets/components/story/_item.scss
@@ -3,12 +3,8 @@
 	justify-content: center;
 	align-items: stretch;
 	flex-wrap: wrap;
-	padding: $baseUnit;
+	padding: $baseUnit 0;
 	@include clearfix;
-}
-
-.item.item-header .visualisation {
-	height: $baseUnit * 15;
 }
 
 .item .column-left {
