--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -27,5 +27,6 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'components/story/block';
 @import 'components/story/reference';
 @import 'components/story/entity';
+@import 'components/story/about';
 @import 'components/page';
 @import 'components/article';
