add correct titles

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,6 +7,7 @@ layout: story
   <div class="block block-red visualisation">
   </div>
   <div class="<%= blog('blocks').articles[0].data.classes %>">
+    <h1 class="logo title textbar"><%= blog('blocks').articles[0].data.title %></h1>
     <div><%= blog('blocks').articles[0].body %></div>
   </div>
 </div>
@@ -29,6 +30,7 @@ layout: story
 
 <div class="item item-people">
   <div class="<%= blog('blocks').articles[13].data.classes %>">
+    <h1 class="logo title textbar"><%= blog('blocks').articles[13].data.title %></h1>
     <div><%= blog('blocks').articles[13].body %></div>
   </div>
   <div class="block entities">
@@ -40,6 +42,7 @@ layout: story
 
 <div class="item item-about">
   <div class="<%= blog('blocks').articles[14].data.classes %>">
+    <h1 class="logo title textbar"><%= blog('blocks').articles[14].data.title %></h1>
     <div><%= blog('blocks').articles[14].body %></div>
   </div>
   <div class="block about-contents">
