--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -1,4 +1,5 @@
 <div class="<%= block.data.classes %>">
+  <h1 class="logo title textbar"><%= block.title %></h1>
   <div><%= block.body %></div>
   <div>
     <% if block.data.references %>
