--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ layout: story
   <div class="block block-red visualisation">
   </div>
   <div class="<%= blog('blocks').articles[0].data.classes %>">
-    <h1 class="logo title textbar"><%= blog('blocks').articles[0].data.title %></h1>
+    <h1 class="logo main-logo title textbar"><%= blog('blocks').articles[0].data.title %></h1>
     <div><%= blog('blocks').articles[0].body %></div>
   </div>
 </div>
