--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -21,10 +21,10 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'global/mediaqueries';
 @import 'global/layout';
 
-@import 'global/components/textbar';
-@import 'global/components/tags';
-@import 'global/components/logo';
-@import 'global/components/buttons';
+@import 'global/partials/textbar';
+@import 'global/partials/tags';
+@import 'global/partials/logo';
+@import 'global/partials/buttons';
 
 @import 'components/nav';
 @import 'components/footer';
