--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,7 +52,7 @@ layout: story
        <li><%= article.title %></li>
       <% end %>
     </ul>
-    <ul class="about-contents-ul">
+    <ul class="about-contents-ul right">
       <h2>Projects</h2>
       <% blog('pages').articles.each do |page| %>
        <li><%= page.title %></li>
