--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,7 +30,7 @@ layout: story
 
 <div class="item item-people">
   <div class="<%= blog('blocks').articles[13].data.classes %>">
-    <h1 class="logo title textbar"><%= blog('blocks').articles[13].data.title %></h1>
+    <h1 class="title textbar"><%= blog('blocks').articles[13].data.title %></h1>
     <div><%= blog('blocks').articles[13].body %></div>
   </div>
   <div class="block entities">
@@ -42,7 +42,7 @@ layout: story
 
 <div class="item item-about">
   <div class="<%= blog('blocks').articles[14].data.classes %>">
-    <h1 class="logo title textbar"><%= blog('blocks').articles[14].data.title %></h1>
+    <h1 class="title textbar"><%= blog('blocks').articles[14].data.title %></h1>
     <div><%= blog('blocks').articles[14].body %></div>
   </div>
   <div class="block about-contents">
