--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -1,27 +1,15 @@
 .block {
   width: 100%;
   padding: $baseUnit;
-  margin: $baseUnit $baseUnit $baseUnit 0;
-  text-align: center;
   @include clearfix;
-}
-
-.column-left .block {
-  text-align: right;
-}
-
-.column-right .block {
-  text-align: left;
 }
 
 .block.entities {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .block.visualisation {
-  height: $baseUnit * 13;
-  margin-left: $baseUnit;
-  border: 1px solid black;
+  height: 60vh;
+  margin: 0 $baseUnit;
 }
