--- a/source/stylesheets/components/story/_item.scss
+++ b/source/stylesheets/components/story/_item.scss
@@ -3,7 +3,7 @@
 	justify-content: center;
 	align-items: stretch;
 	flex-wrap: wrap;
-	padding: $baseUnit 0;
+	// padding: $baseUnit 0;
 	@include clearfix;
 }
 
@@ -13,7 +13,7 @@
 	flex-wrap: wrap;
 	width: 100%;
 	@media (min-width: 1024px) {
-		width: 50%;
+		width: 70%;
 	}
 }
 
@@ -23,6 +23,6 @@
 	float: left;
 	width: 100%;
 	@media (min-width: 1024px) {
-		width: 50%;
+		width: 30%;
 	}
 }
