--- a/source/stylesheets/global/_mediaqueries.scss
+++ b/source/stylesheets/global/_mediaqueries.scss
@@ -1,36 +1,60 @@
-@media (max-width: 400px){
+@media (min-width: 400px){
   html {
     font-size: 12px;
   }
 }
 
-@media (min-height: 600px) and (min-width: 1024px){
+@media (min-width: 600px){
   html {
-    font-size: 10px;
+    font-size: 18px;
   }
 }
 
-@media (min-height: 700px) and (min-width: 1120px){
+@media (min-width: 800px){
   html {
-    font-size: 12px;
+    font-size: 20px;
   }
 }
 
-@media (min-height: 800px) and (min-width: 1210px){
+@media (min-width: 1000px){
   html {
-    font-size: 13px;
+    font-size: 22px;
   }
 }
 
-@media (min-height: 900px) and (min-width: 1310px){
+@media (min-width: 1200px){
   html {
-    font-size: 14px;
+    font-size: 24px;
   }
 }
 
-@media (min-height: 1080px) and (min-width: 1500px) {
-  html {
-    font-size: 16px;
-  }
-}
+// @media (min-height: 600px) and (min-width: 1024px){
+//   html {
+//     font-size: 10px;
+//   }
+// }
+
+// @media (min-height: 700px) and (min-width: 1120px){
+//   html {
+//     font-size: 12px;
+//   }
+// }
+
+// @media (min-height: 800px) and (min-width: 1210px){
+//   html {
+//     font-size: 13px;
+//   }
+// }
+
+// @media (min-height: 900px) and (min-width: 1310px){
+//   html {
+//     font-size: 14px;
+//   }
+// }
+
+// @media (min-height: 1080px) and (min-width: 1500px) {
+//   html {
+//     font-size: 16px;
+//   }
+// }
 
