--- a/source/stylesheets/global/partials/_logo.scss
+++ b/source/stylesheets/global/partials/_logo.scss
@@ -1,14 +1,3 @@
-.logo {
-  padding: $baseUnit;
-  user-select: none;
-  transition: background-color 0.4s ease;
-}
-
-.logo:hover .textbar {
-    background-color: $inverseColor;
-    color: $baseColor;
-}
-    
-.main-logo {
-  // font-size: rem-calc(28);
-}
+// .main-logo {
+//   font-size: rem-calc(28);
+// }
