--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,10 +4,14 @@ layout: story
 ---
 
 <div class="item item-header">
-  <div class="block block-red visualisation">
-  </div>
+  <!-- <div class="block block-red visualisation">
+  </div> -->
   <div class="<%= blog('blocks').articles[0].data.classes %>">
-    <h1 class="logo main-logo title textbar"><%= blog('blocks').articles[0].data.title %></h1>
+    <h1 class="logo main-logo title textbar textbar-big">Coding</h1>
+    <br>
+    <h1 class="logo main-logo title textbar textbar-big">The</h1>
+    <br>
+    <h1 class="logo main-logo title textbar textbar-big">Humanities</h1>
     <div><%= blog('blocks').articles[0].body %></div>
   </div>
 </div>
