--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -1,5 +1,9 @@
-<div class="<%= block.data.classes %>">
-  <h1 class="title"><%= block.title %></h1>
+<div class="<%= block.data.classes %><% if block.data.block != 1 %> block-indent <% end %>">
+  <% if block.data.block == 1 %>
+  <h1 class="textbar title"><%= block.title %></h1>
+  <% elsif %>
+  <h4 class="title sub-title"><%= block.title %></h4>
+  <% end %>
   <div><%= block.body %></div>
   <div>
     <% if block.data.references %>
