--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -1,4 +1,8 @@
 .reference {
   padding: $baseUnit $baseUnit $baseUnit 0;
   float: left;
+  @media (min-width: 800px){
+    font-size: rem-calc(12); //16
+    line-height: rem-calc(16); //20
+  }
 }
