--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -14,6 +14,14 @@
   margin: 0 $baseUnit;
 }
 
-.block-indent {
-  margin: 0 $baseUnit;
+.block-indent p, .block li {
+  @media (min-width: 800px){
+    font-size: rem-calc(12); //16
+    line-height: rem-calc(16); //20
+  }
+}
+
+.block ul {
+  list-style: disc;
+  margin-bottom: 1rem;
 }
