--- a/source/stylesheets/components/story/_item.scss
+++ b/source/stylesheets/components/story/_item.scss
@@ -3,7 +3,7 @@
 	justify-content: center;
 	align-items: stretch;
 	flex-wrap: wrap;
-	// padding: $baseUnit 0;
+	margin: 0 0 ($baseUnit * 10) 0;
 	@include clearfix;
 }
 
