--- a/source/partials/_story-entity.erb
+++ b/source/partials/_story-entity.erb
@@ -1,7 +1,6 @@
 <div class="entity">
   <a href="<%= entity.url || 'https://www.google.nl/#q=' + entity.name %>">
     <h3><%= entity.name %></h3>
-    <p><%= entity.description %></p>
-    <h4><%= entity.job %></h4>
+    <p><%= entity.job %></p>
   </a>
 </div> 
