--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -6,10 +6,10 @@
   <% end %>
   <div><%= block.body %></div>
   <div>
-    <!--<% if block.data.references %>
+    <% if block.data.references %>
     <% for reference in block.data.references %>
       <%= partial(:"partials/story-reference", :locals => { :reference => reference })  %>
     <% end %>
-    <% end %>-->
+    <% end %>
   </div>
 </div>
