--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,3 +1,6 @@
 <div class="reference">
-  <a href="<%= reference.type %>/<%= reference.slug %>.html"><h3><%= reference.slug %></h3></a>
+  <a href="<%= (defined? reference.type) ? reference.type : reference.data.type %>/<%= (defined? reference.slug) ? reference.slug : 'nooo' %>.html">
+    <h3><%= (defined? reference.data) ? reference.data.title : reference.slug %></h3>
+    <p><%= (defined? reference.data) ? reference.summary : "" %></p>
+  </a>
 </div> 
