--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: The Story of Coding the Humanities
 layout: story
 ---
 
-<div class="item item-header">
+<div id="item-header" class="item item-header">
   <!-- <div class="block block-red visualisation">
   </div> -->
   <div class="<%= blog('blocks').articles[0].data.classes %>">
@@ -17,7 +17,7 @@ layout: story
 </div>
 
 <% for item in 2..4 %>
-<div class="item item-body">
+<div id="item-body-<%= item %>" class="item item-body item-num-<%= item %>">
   <div class="column-left">
   <% blog('blocks').articles.each do |block| %>
   <% if block.data.item == item and block.data.block != 4 %>
@@ -32,10 +32,10 @@ layout: story
 </div>
 <% end %>
 
-<div class="item item-people">
-  <div class="<%= blog('blocks').articles[13].data.classes %>">
+<div id="item-partners" class="item item-partners">
+  <div class="<%= blog('blocks').articles[13].data.classes %> block-indent">
     <h1 class="title textbar"><%= blog('blocks').articles[13].data.title %></h1>
-    <div><%= blog('blocks').articles[13].body %></div>
+    <div ><%= blog('blocks').articles[13].body %></div>
   </div>
   <div class="block entities">
     <% for entity in blog('blocks').articles[13].data.entities %>
@@ -44,12 +44,12 @@ layout: story
   </div>
 </div>
 
-<div class="item item-about">
-  <div class="<%= blog('blocks').articles[14].data.classes %>">
+<div id="item-about" class="item item-about">
+  <div class="<%= blog('blocks').articles[14].data.classes %> block-indent">
     <h1 class="title textbar"><%= blog('blocks').articles[14].data.title %></h1>
     <div><%= blog('blocks').articles[14].body %></div>
   </div>
-  <div class="block about-contents">
+  <!--<div class="block about-contents">
     <div class="about-contents-ul left">
       <h2>Articles</h2>
       <% blog('articles').articles.each do |article| %>
@@ -62,5 +62,5 @@ layout: story
       <%= partial(:"partials/story-reference", :locals => { :reference => page })  %>
       <% end %>
     <div>
-  </div>
+  </div> -->
 </div>
