--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,10 +1,10 @@
 <nav>
   <ul class="nav-top">
-    <li class="nav-link"><a href="/">Coding the Humanities</a></li>
-    <li class="nav-link">From Content to Context</li>
-    <li class="nav-link">To Curation</li>
-    <li class="nav-link">To Faciliation</li>
-    <li class="nav-link">Partners</li>
-    <li class="nav-link">About</li>
+    <li><a class="nav-link textbar title" href="#item-header">Coding</a> <a class="nav-link textbar title" href="#item-header">the</a> <a class="nav-link textbar title" href="#item-header">Humanities</a></li>
+    <li><a class="nav-link" href="#item-body-2">From Content to Context</a></li>
+    <li><a class="nav-link" href="#item-body-3">To Curation</a></li>
+    <li><a class="nav-link" href="#item-body-4">To Faciliation</a></li>
+    <li><a class="nav-link" href="#item-partners">Partners</a></li>
+    <li><a class="nav-link" href="#item-about">About</a></li>
   </ul>
 </nav>
