--- a/source/stylesheets/global/partials/_textbar.scss
+++ b/source/stylesheets/global/partials/_textbar.scss
@@ -11,7 +11,7 @@
 }
 
 .textbar.textbar-inverse {
-  background-color: $inverseColor;
+  background-color: $lightBaseColor;
   color: $baseColor;
 }
 
