--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -1,8 +1,8 @@
-<div class="<%= block.data.classes %><% if block.data.block != 1 %> block-indent <% end %>">
+<div class="<%= block.data.classes %><% if block.data.block != 1 %> block-small-typography <% end %>">
   <% if block.data.block == 1 %>
   <h1 class="textbar title"><%= block.title %></h1>
   <% elsif %>
-  <h4 class="title sub-title"><%= block.title %></h4>
+  <h1 class="textbar textbar-inverse title sub-title"><%= block.title %></h4>
   <% end %>
   <div><%= block.body %></div>
   <div>
