--- a/source/stylesheets/components/_nav.scss
+++ b/source/stylesheets/components/_nav.scss
@@ -7,19 +7,19 @@
 
 .nav-top li {
   flex-shrink: 0;
-  margin: 0 $thirdUnit;
+  margin: 0 $thirdUnit 0 0;
+  @media (max-width: 800px){
+    display: none;
+  }
 }
 
 .nav-top li:first-child {
   flex-shrink: 1;
+  @media (max-width: 800px){
+    display: block;
+  }
 }
 
 .nav-link.textbar a {
   color: white;
-}
-
-.nav-link {
-  @media (max-width: 800px){
-    display: none;
-  }
 }
