--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -28,6 +28,7 @@ $imageHeight: ($cardWidth / 12) * 7;
 
 @import 'components/nav';
 @import 'components/footer';
+@import 'components/story/story';
 @import 'components/story/item';
 @import 'components/story/block';
 @import 'components/story/reference';
