--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,6 +1,6 @@
 <nav>
   <ul class="nav-top">
-    <li><a class="nav-link textbar title" href="/">Coding</a> <a class="nav-link textbar title" href="#item-header">the</a> <a class="nav-link textbar title" href="#item-header">Humanities</a></li>
+    <li><a class="nav-link textbar title" href="/">Coding</a> <a class="nav-link textbar title" href="/">the</a> <a class="nav-link textbar title" href="/">Humanities</a></li>
     <li><a class="nav-link" href="/#item-body-2">From Content to Context</a></li>
     <li><a class="nav-link" href="/#item-body-3">To Curation</a></li>
     <li><a class="nav-link" href="/#item-body-4">To Faciliation</a></li>
