--- a/source/stylesheets/components/story/_item.scss
+++ b/source/stylesheets/components/story/_item.scss
@@ -1,6 +1,6 @@
 .item {
 	display: flex;
-	align-items: center;
+	align-items: flex-end;
 	flex-wrap: wrap;
 	margin: 0 0 ($baseUnit * 10) 0;
 	@include clearfix;
@@ -12,7 +12,6 @@
 
 .item .column-left {
 	display: flex;
-	align-items: stretch;
 	flex-wrap: wrap;
 	width: 100%;
 	@media (min-width: 1024px) {
@@ -22,9 +21,9 @@
 
 .item .column-right {
 	display: flex;
-	align-items: stretch;
-	float: left;
+	align-items: flex-start;
 	width: 100%;
+	height: 100%;
 	@media (min-width: 1024px) {
 		width: 40%;
 	}
