--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,10 +1,10 @@
 <nav>
   <ul class="nav-top">
-    <li><a class="nav-link textbar title" href="/">Coding</a> <a class="nav-link textbar title" href="/">the</a> <a class="nav-link textbar title" href="/">Humanities</a></li>
-    <li><a class="nav-link" href="/#item-body-2">From Content to Context</a></li>
-    <li><a class="nav-link" href="/#item-body-3">To Curation</a></li>
-    <li><a class="nav-link" href="/#item-body-4">To Faciliation</a></li>
-    <li><a class="nav-link" href="/#item-partners">Partners</a></li>
-    <li><a class="nav-link" href="/#item-about">About</a></li>
+    <li><a class="nav-link textbar title" href="/cth-documentation-middleman/">Coding</a> <a class="nav-link textbar title" href="/cth-documentation-middleman/">the</a> <a class="nav-link textbar title" href="/cth-documentation-middleman/">Humanities</a></li>
+    <li><a class="nav-link" href="/cth-documentation-middleman/#item-body-2">From Content to Context</a></li>
+    <li><a class="nav-link" href="/cth-documentation-middleman/#item-body-3">To Curation</a></li>
+    <li><a class="nav-link" href="/cth-documentation-middleman/#item-body-4">To Faciliation</a></li>
+    <li><a class="nav-link" href="/cth-documentation-middleman/#item-partners">Partners</a></li>
+    <li><a class="nav-link" href="/cth-documentation-middleman/#item-about">About</a></li>
   </ul>
 </nav>
